devops/k8s/deploy.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Copyright 2020 The Province of British Columbia
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  labels:
    app: hipster-store
spec:
  selector:
    matchLabels:
      role: emailservice
  template:
    metadata:
      labels:
        app: hipster-store
        role: emailservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/emailservice:v0.1.3
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        resources:
          requests:
            cpu: 40m
            memory: 64Mi
          limits:
            cpu: 60m
            memory: 92Mi
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  labels:
    app: hipster-store
spec:
  selector:
    role: emailservice
  ports:
  - name: grpc
    port: 5000
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
  labels:
    app: hipster-store
spec:
  selector:
    matchLabels:
      role: checkoutservice
  template:
    metadata:
      labels:
        app: hipster-store
        role: checkoutservice
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.1.3
          ports:
          - containerPort: 5050
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5050"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5050"]
          resources:
            requests:
              cpu: 40m
              memory: 64Mi
            limits:
              cpu: 60m
              memory: 92Mi
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  labels:
    app: hipster-store
spec:
  selector:
    role: checkoutservice
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
  labels:
    app: hipster-store
spec:
  selector:
    matchLabels:
      role: recommendationservice
  template:
    metadata:
      labels:
        app: hipster-store
        role: recommendationservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.1.3
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        resources:
          requests:
            cpu: 40m
            memory: 64Mi
          limits:
            cpu: 60m
            memory: 92Mi
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  labels:
    app: hipster-store
spec:
  selector:
    role: recommendationservice
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: hipster-store
spec:
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        app: hipster-store
        role: frontend
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/frontend:v0.1.3
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-readiness-probe"
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-liveness-probe"
          resources:
            requests:
              cpu: 40m
              memory: 64Mi
            limits:
              cpu: 60m
              memory: 92Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: hipster-store
spec:
  selector:
    role: frontend
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Route
metadata:
  name: frontend-route
  labels:
    app: hipster-store
spec:
  path: ""
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: frontend
    weight: 100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  labels:
    app: hipster-store
spec:
  selector:
    matchLabels:
      role: paymentservice
  template:
    metadata:
      labels:
        app: hipster-store
        role: paymentservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/paymentservice:v0.1.3
        ports:
        - containerPort: 50051
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        resources:
          requests:
            cpu: 40m
            memory: 64Mi
          limits:
            cpu: 60m
            memory: 92Mi
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  labels:
    app: hipster-store
spec:
  selector:
    role: paymentservice
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
  labels:
    app: hipster-store
spec:
  selector:
    matchLabels:
      role: productcatalogservice
  template:
    metadata:
      labels:
        app: hipster-store
        role: productcatalogservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.1.3
        ports:
        - containerPort: 3550
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:3550"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:3550"]
#        env:
#          - name: JAEGER_SERVICE_ADDR
#            value: "jaeger-collector:14268"
        resources:
          requests:
            cpu: 40m
            memory: 64Mi
          limits:
            cpu: 60m
            memory: 92Mi
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  labels:
    app: hipster-store
spec:
  selector:
    role: productcatalogservice
  ports:
  - name: grpc
    port: 3550
    targetPort: 3550
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  labels:
    app: hipster-store
spec:
  selector:
    matchLabels:
      role: cartservice
  template:
    metadata:
      labels:
        app: hipster-store
        role: cartservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/cartservice:v0.1.3
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: 40m
            memory: 64Mi
          limits:
            cpu: 60m
            memory: 92Mi
        readinessProbe:
          initialDelaySeconds: 15
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7070", "-rpc-timeout=5s"]
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7070", "-rpc-timeout=5s"]
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  labels:
    app: hipster-store
spec:
  selector:
    role: cartservice
  ports:
  - name: grpc
    port: 7070
    targetPort: 7070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
  labels:
    app: hipster-store
spec:
  selector:
    matchLabels:
      role: currencyservice
  template:
    metadata:
      labels:
        app: hipster-store
        role: currencyservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/currencyservice:v0.1.3
        ports:
        - name: grpc
          containerPort: 7000
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7000"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7000"]
        resources:
          requests:
            cpu: 40m
            memory: 64Mi
          limits:
            cpu: 60m
            memory: 92Mi
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  labels:
    app: hipster-store
spec:
  selector:
    role: currencyservice
  ports:
  - name: grpc
    port: 7000
    targetPort: 7000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
  labels:
    app: hipster-store
spec:
  selector:
    matchLabels:
      role: shippingservice
  template:
    metadata:
      labels:
        app: hipster-store
        role: shippingservice
    spec:
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/shippingservice:v0.1.3
        ports:
        - containerPort: 50051
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
#        env:
#          - name: JAEGER_SERVICE_ADDR
#            value: "jaeger-collector:14268"
        resources:
          requests:
            cpu: 40m
            memory: 64Mi
          limits:
            cpu: 60m
            memory: 92Mi
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
  labels:
    app: hipster-store
spec:
  selector:
    role: shippingservice
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
  labels:
    app: hipster-store
spec:
  selector:
    matchLabels:
      role: redis-cart
  template:
    metadata:
      labels:
        app: hipster-store
        role: redis-cart
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
        resources:
          requests:
            cpu: 40m
            memory: 64Mi
          limits:
            cpu: 60m
            memory: 92Mi
      volumes:
      - name: redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  labels:
    app: hipster-store
spec:
  selector:
    role: redis-cart
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
  labels:
    app: hipster-store
spec:
  selector:
    matchLabels:
      role: adservice
  template:
    metadata:
      labels:
        app: hipster-store
        role: adservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/adservice:v0.1.3
        ports:
        - containerPort: 9555
        resources:
          requests:
            cpu: 80m
            memory: 192Mi
          limits:
            cpu: 100m
            memory: 256Mi
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 15
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:9555"]
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 15
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:9555"]
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
  labels:
    app: hipster-store
spec:
  selector:
    role: adservice
  ports:
  - name: grpc
    port: 9555
    targetPort: 9555
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  labels:
    app: hipster-store
spec:
  selector:
    matchLabels:
      role: loadgenerator
  replicas: 0
  template:
    metadata:
      labels:
        app: hipster-store
        role: loadgenerator
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/loadgenerator:v0.1.3
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi
